--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,16 +11,18 @@ jobs:
     steps:
     - name: Set variables
       id: vars
-      run: |
-        echo "::set-output name=tag::vandrijevik/kubekit:latest"
+      run: echo "::set-output name=repository::vandrijevik/kubekit"
 
     - uses: actions/checkout@v1
-
-    - name: Build Docker image
-      run: docker build . --tag ${{steps.vars.outputs.tag}}
 
     - name: Login to Docker registry
       run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
 
+    - name: Build Docker image
+      run: |
+        docker build . \
+          --tag "${{steps.vars.outputs.repository}}:$(git rev-parse --short $GITHUB_SHA)" \
+          --tag "${{steps.vars.outputs.repository}}:latest" \
+
     - name: Push image to Docker registry
-      run: docker push ${{steps.vars.outputs.tag}}
+      run: docker push ${{steps.vars.outputs.repository}}
