--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,14 +15,11 @@ jobs:
 
     - uses: actions/checkout@v1
 
-    - name: Login to Docker registry
-      run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
-
-    - name: Build Docker image
-      run: |
-        docker build . \
-          --tag "${{steps.vars.outputs.repository}}:$(git rev-parse --short $GITHUB_SHA)" \
-          --tag "${{steps.vars.outputs.repository}}:latest" \
-
-    - name: Push image to Docker registry
-      run: docker push ${{steps.vars.outputs.repository}}
+    - name: Build and push Docker image
+      uses: docker/build-push-action@v1.1.0
+      with:
+        password: ${{ secrets.DOCKER_PASSWORD }}
+        repository: vandrijevik/kubekit
+        tag_with_sha: true
+        tags: latest
+        username: ${{ secrets.DOCKER_USERNAME }}
