--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - master
+  release:
+    types: [published]
 
 jobs:
   build-and-push:
@@ -20,6 +22,7 @@ jobs:
       with:
         password: ${{ secrets.DOCKER_PASSWORD }}
         repository: vandrijevik/kubekit
+        tag_with_ref: true
         tag_with_sha: true
         tags: latest
         username: ${{ secrets.DOCKER_USERNAME }}
