--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,13 +11,17 @@ jobs:
   build-and-push:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
 
-    - name: Build and push Docker image
-      uses: docker/build-push-action@v1.1.0
-      with:
-        password: ${{ secrets.DOCKER_PASSWORD }}
-        repository: vandrijevik/kubekit
-        tag_with_ref: true
-        tag_with_sha: true
-        username: ${{ secrets.DOCKER_USERNAME }}
+      - name: Authenticate with Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: vandrijevik/kubekit:latest
