--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,9 +3,7 @@ name: Publish
 on:
   push:
     branches:
-      - master
-  release:
-    types: [published]
+      - main
 
 jobs:
   build-and-push:
